{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 1180,
  "lineage": "b60fbbc2-485e-bd96-c87e-c68dbabb48a8",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:security-group/sg-04aee368fe6f58ad6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aee368fe6f58ad6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a13c40ededcab33f"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecommerce-ecs-sg",
            "name_prefix": "",
            "owner_id": "776733965771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-ecs-sg"
            },
            "tags_all": {
              "Name": "ecommerce-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_security_group.load_balancer",
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776733965771:loadbalancer/app/ecommerce-lb/11ee00f8803e6e01",
            "arn_suffix": "app/ecommerce-lb/11ee00f8803e6e01",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-lb-687752347.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:776733965771:loadbalancer/app/ecommerce-lb/11ee00f8803e6e01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-lb",
            "security_groups": [
              "sg-0a13c40ededcab33f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e6dca2d4b9a3568"
              },
              {
                "subnet_id": "subnet-080e79070c96e8dcc"
              }
            ],
            "subnets": [
              "subnet-04e6dca2d4b9a3568",
              "subnet-080e79070c96e8dcc"
            ],
            "tags": {
              "Name": "ecommerce-lb"
            },
            "tags_all": {
              "Name": "ecommerce-lb"
            },
            "vpc_id": "vpc-072148530d3a4a73e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.load_balancer",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776733965771:listener/app/ecommerce-lb/11ee00f8803e6e01/d168981362acb6fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:776733965771:targetgroup/ecommerce-ecs/5af35e717c81fcb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776733965771:listener/app/ecommerce-lb/11ee00f8803e6e01/d168981362acb6fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:776733965771:loadbalancer/app/ecommerce-lb/11ee00f8803e6e01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "ecommerce-lb-listener"
            },
            "tags_all": {
              "Name": "ecommerce-lb-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.default",
            "module.load_balancer.aws_lb_target_group.default",
            "module.load_balancer.aws_security_group.load_balancer",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776733965771:targetgroup/ecommerce-ecs/5af35e717c81fcb1",
            "arn_suffix": "targetgroup/ecommerce-ecs/5af35e717c81fcb1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776733965771:targetgroup/ecommerce-ecs/5af35e717c81fcb1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecommerce-ecs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecommerce-lb-starget-group"
            },
            "tags_all": {
              "Name": "ecommerce-lb-starget-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:security-group/sg-0a13c40ededcab33f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a13c40ededcab33f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-lb-sg",
            "name_prefix": "",
            "owner_id": "776733965771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-lb-sg"
            },
            "tags_all": {
              "Name": "ecommerce-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa081a19d88769eb",
            "association_id": "eipassoc-0a1d82e6c8eaa37ba",
            "domain": "vpc",
            "id": "eipalloc-0aa081a19d88769eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0019c8484a2908d98",
            "private_dns": "ip-10-0-2-32.ec2.internal",
            "private_ip": "10.0.2.32",
            "public_dns": "ec2-52-201-21-35.compute-1.amazonaws.com",
            "public_ip": "52.201.21.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecommerce-eip"
            },
            "tags_all": {
              "Name": "ecommerce-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0b4738af092c95c",
            "association_id": "eipassoc-02b113e68ae5a173f",
            "domain": "vpc",
            "id": "eipalloc-0a0b4738af092c95c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea6f1e8c22dff43c",
            "private_dns": "ip-10-0-3-184.ec2.internal",
            "private_ip": "10.0.3.184",
            "public_dns": "ec2-107-21-9-245.compute-1.amazonaws.com",
            "public_ip": "107.21.9.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecommerce-eip"
            },
            "tags_all": {
              "Name": "ecommerce-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:internet-gateway/igw-0c32ddf99f0294730",
            "id": "igw-0c32ddf99f0294730",
            "owner_id": "776733965771",
            "tags": {
              "Name": "ecommerce-igw"
            },
            "tags_all": {
              "Name": "ecommerce-igw"
            },
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa081a19d88769eb",
            "connectivity_type": "public",
            "id": "nat-0c46bb607e44eed88",
            "network_interface_id": "eni-0019c8484a2908d98",
            "private_ip": "10.0.2.32",
            "public_ip": "52.201.21.35",
            "subnet_id": "subnet-080e79070c96e8dcc",
            "tags": {
              "Name": "ecommerce-nat-gateway"
            },
            "tags_all": {
              "Name": "ecommerce-nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.default",
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0b4738af092c95c",
            "connectivity_type": "public",
            "id": "nat-0dd1686b08103e702",
            "network_interface_id": "eni-0ea6f1e8c22dff43c",
            "private_ip": "10.0.3.184",
            "public_ip": "107.21.9.245",
            "subnet_id": "subnet-04e6dca2d4b9a3568",
            "tags": {
              "Name": "ecommerce-nat-gateway"
            },
            "tags_all": {
              "Name": "ecommerce-nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.default",
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d799e7e38e78b8e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c46bb607e44eed88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d799e7e38e78b8e1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.default",
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_nat_gateway.default",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05930bc6bad4c56681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dd1686b08103e702",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05930bc6bad4c5668",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.default",
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_nat_gateway.default",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c32ddf99f0294730",
            "id": "r-rtb-0f7d184321bd7d0591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7d184321bd7d059",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.default",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:route-table/rtb-0d799e7e38e78b8e1",
            "id": "rtb-0d799e7e38e78b8e1",
            "owner_id": "776733965771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c46bb607e44eed88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-route-table-private"
            },
            "tags_all": {
              "Name": "ecommerce-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:route-table/rtb-05930bc6bad4c5668",
            "id": "rtb-05930bc6bad4c5668",
            "owner_id": "776733965771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd1686b08103e702",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-route-table-private"
            },
            "tags_all": {
              "Name": "ecommerce-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:route-table/rtb-0f7d184321bd7d059",
            "id": "rtb-0f7d184321bd7d059",
            "owner_id": "776733965771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c32ddf99f0294730",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-route-table-public"
            },
            "tags_all": {
              "Name": "ecommerce-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf4e8ec1d7ecceb",
            "route_table_id": "rtb-0d799e7e38e78b8e1",
            "subnet_id": "subnet-01e43f68cf4739068"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f022fc7fee1d6088",
            "route_table_id": "rtb-05930bc6bad4c5668",
            "subnet_id": "subnet-001ce86dbe74b8b0f"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b90551a524d28162",
            "route_table_id": "rtb-0f7d184321bd7d059",
            "subnet_id": "subnet-080e79070c96e8dcc"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2c654893aedbd1",
            "route_table_id": "rtb-0f7d184321bd7d059",
            "subnet_id": "subnet-04e6dca2d4b9a3568"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:subnet/subnet-01e43f68cf4739068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e43f68cf4739068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776733965771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-private-subnet"
            },
            "tags_all": {
              "Name": "ecommerce-private-subnet"
            },
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:subnet/subnet-001ce86dbe74b8b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001ce86dbe74b8b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776733965771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-private-subnet"
            },
            "tags_all": {
              "Name": "ecommerce-private-subnet"
            },
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:subnet/subnet-080e79070c96e8dcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080e79070c96e8dcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776733965771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-public-subnet"
            },
            "tags_all": {
              "Name": "ecommerce-public-subnet"
            },
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:subnet/subnet-04e6dca2d4b9a3568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e6dca2d4b9a3568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776733965771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-public-subnet"
            },
            "tags_all": {
              "Name": "ecommerce-public-subnet"
            },
            "vpc_id": "vpc-072148530d3a4a73e"
          },
          "dependencies": [
            "module.networking.aws_vpc.default",
            "module.networking.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776733965771:vpc/vpc-072148530d3a4a73e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03af4687ff6deb46d",
            "default_route_table_id": "rtb-0837b406f9946b2aa",
            "default_security_group_id": "sg-009613f5081f862f3",
            "dhcp_options_id": "dopt-b17af4cb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072148530d3a4a73e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0837b406f9946b2aa",
            "owner_id": "776733965771",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}